--- a/app.css
+++ b/app.css
@@ -2,6 +2,7 @@
 {
 	background: #282828;
 	color: #FFFFFF;
+	overflow: hidden;
 }
 
 h1
@@ -11,10 +12,17 @@ h1
 
 .mainc
 {
-	padding: 20%;
+	padding: 15%;
 }
 
 .mono
 {
 	font-family: monospace;
+}
+
+/* Spans */
+
+.sylw
+{
+	color: #F7E028;
 }
